--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,6 +27,7 @@
     <body ng-controller="messageController">
         <div>
             <span id="msgNotification">Message: {{newMsg}}</span>
+            <span>{{blah}}</span>
         </div>
         <div id="msgInputArea" class="form-inline">
             <label class="control-label">Subject:</label> <input ng-model="message.subject" class="form-control"/>
@@ -49,7 +50,7 @@
                     <td><input ng-model="msg.content" class="form-control"/></td>
                     <td>
                         <button ng-click="updateMessage(msg)" class="btn btn-warning">update</button>
-                        <button ng-click="deleteMessage(msg.id)" class="btn btn-danger">delete</button>
+                        <button ng-click="deleteMessage(msg)" class="btn btn-danger">delete</button>
                     </td>
                 </tr>
             </table>
