--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
  * limitations under the License.
 -->
 <!doctype html>
-<html ng-app="messageApp">
+<html xmlns:ng="http://angularjs.org" ng-app="messageApp">
     <head>
         <meta charset="utf-8">
         <title>angularJS-JEE6-Sample</title>
@@ -24,14 +24,14 @@
         <script src="js/app.js"></script>
         <link rel="stylesheet" href="css/bootstrap.css" />
     </head>
-    <body ng-controller="messageController">
+    <body ng-controller="messageCtrl">
         <div>
             <span id="msgNotification">Message: {{newMsg}}</span>
             <span>{{blah}}</span>
         </div>
         <div id="msgInputArea" class="form-inline">
-            <label class="control-label">Subject:</label> <input ng-model="message.subject" class="form-control"/>
-            <label class="control-label">Message:</label> <input ng-model="message.content" class="form-control"/>
+            <label>Subject:</label> <input ng-model="message.subject" class="form-control"/>
+            <label>Message:</label> <input ng-model="message.content" class="form-control"/>
             <button ng-click="newMessage()" class="btn btn-default">Submit</button>
         </div>
         <div id="msgOutputArea">
@@ -55,19 +55,5 @@
                 </tr>
             </table>
         </div>
-        <!--script>
-                    function getRootURI() {
-                        return "http://" + (document.location.hostname === "" ? "localhost" : document.location.hostname) + ":" +
-                                (document.location.port === "" ? "8080" : document.location.port);
-                    };
-
-                    (function poll() {
-                        $.ajax({url: getRootURI() + "/basic-angularhs-ee/newmsg", success: function(data) {
-                                var newMsg = $("msgNotification");
-                                newMsg.empty();
-                                newMsg.append("<p>" + data + "</p>");
-                            }, dataType: "plain/text", complete: poll, timeout: 30000});
-                    })();
-        </script -->
     </body>
 </html>
