Long polling for New messages, updates and deletion of messages.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,7 +27,7 @@
     <body ng-controller="messageCtrl">
         <div>
             <span id="msgNotification">Message: {{newMsg}}</span>
-            <span>{{blah}}</span>
+            <span>Comp: {{comp}}</span>
         </div>
         <div id="msgInputArea" class="form-inline">
             <label>Subject:</label> <input ng-model="message.subject" class="form-control"/>
