--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,8 +26,9 @@
     </head>
     <body ng-controller="messageCtrl">
         <div>
-            <span id="msgNotification">MessageNotification: {{newMsg}}</span>
+            <span id="msgNotification">MessageNotification: {{messageEvent}}</span>
             <span id="msgSubmitted">Message Submitted: {{comp}}</span>
+            <span>cid: {{cid}}</span>
         </div>
         <div id="msgInputArea" class="form-inline">
             <label>Subject:</label> <input ng-model="message.subject" class="form-control"/>
